

 abstract class MetodoPago {


    public MetodoPago(){
    }

    abstract void procesarPago (double importe);
}
